--- a/.env.template
+++ b/.env.template
@@ -5,6 +5,8 @@ QDRANT_PORT=6333
 OPENAI_API_KEY="your-openai-api-key-here"
 EMBED_MODEL="text-embedding-ada-002"
 MODEL_DIMENSIONS="1536"
+XAI_API_KEY="your-xai-api-key-here"
+XAI_MODEL="your-xai-model-here"
 S3_BUCKET="your-s3-bucket-name-here"
 S3_ACCESS_KEY="your-s3-access-key-here"
 S3_SECRET_KEY="your-s3-secret-key-here"
