Add LangSmith integration

--- a/.env.template
+++ b/.env.template
@@ -7,6 +7,8 @@ EMBED_MODEL="text-embedding-ada-002"
 MODEL_DIMENSIONS="1536"
 XAI_API_KEY="your-xai-api-key-here"
 XAI_MODEL="your-xai-model-here"
+LANGSMITH_API_KEY="your-langsith-api-key-here"
+LANGSMITH_PROJECT="your-langsith-project-name-here"
 S3_BUCKET="your-s3-bucket-name-here"
 S3_ACCESS_KEY="your-s3-access-key-here"
 S3_SECRET_KEY="your-s3-secret-key-here"
