--- a/docs/package.json
+++ b/docs/package.json
@@ -3,9 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "generate-docs": "node ./scripts/generate-docs.mjs",
     "build": "next build",
-    "dev": "npm run generate-docs && next dev --port 3005",
+    "dev": "next dev --port 3005",
     "start": "next start",
     "postinstall": "fumadocs-mdx"
   },
