--- a/docs/package.json
+++ b/docs/package.json
@@ -6,7 +6,7 @@
     "generate": "node ./scripts/generate-docs.mjs",
     "build": "next build",
     "dev": "npm run generate && next dev --port 3005",
-    "start": "next start",
+    "start": "next start --port 3005",
     "postinstall": "fumadocs-mdx"
   },
   "dependencies": {
