--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,7 +31,9 @@ services:
     container_name: docs
     build: ./docs
     ports:
-      - "3005:3005"
+      - "3007:3007"
+    environment:
+      - NODE_ENV=production
     command: npm start
     depends_on:
       - api
@@ -44,6 +46,8 @@ services:
     ports:
       - "6333:6333"
       - "6334:6334"
+    volumes:
+      - ./qdrant_storage:/qdrant/storage
     env_file:
       - .env
     networks:
