--- a/docs/package.json
+++ b/docs/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "generate": "node ./scripts/generate-docs.mjs",
     "build": "next build",
-    "dev": "npm run generate && next dev --port 3005",
-    "start": "next start --port 3005",
+    "dev": "npm run generate && next dev --port 3006",
+    "start": "npm run build && next start --port 3007",
     "postinstall": "fumadocs-mdx"
   },
   "dependencies": {
@@ -25,6 +25,7 @@
     "@types/node": "22.15.28",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
+    "openapi-types": "^12.1.3",
     "postcss": "^8.5.4",
     "tailwindcss": "^4.1.8",
     "typescript": "^5.8.3"
