--- a/requirements.txt
+++ b/requirements.txt
@@ -71,8 +71,18 @@ jmespath==1.0.1
     # via
     #   boto3
     #   botocore
-langsmith==0.3.44
+jsonpatch==1.33
+    # via langchain-core
+jsonpointer==3.0.0
+    # via jsonpatch
+langchain-core==0.3.63
+    # via langchain-text-splitters
+langchain-text-splitters==0.3.8
     # via -r requirements.in
+langsmith==0.3.44
+    # via
+    #   -r requirements.in
+    #   langchain-core
 mypy==1.16.0
     # via -r requirements.in
 mypy-extensions==1.1.0
@@ -83,8 +93,9 @@ openai==1.84.0
     # via -r requirements.in
 orjson==3.10.18
     # via langsmith
-packaging==25.0
+packaging==24.2
     # via
+    #   langchain-core
     #   langsmith
     #   pytest
 pathspec==0.12.1
@@ -109,6 +120,7 @@ pydantic==2.11.5
     # via
     #   -r requirements.in
     #   fastapi
+    #   langchain-core
     #   langsmith
     #   openai
     #   pydantic-settings
@@ -139,7 +151,9 @@ python-dotenv==1.1.0
 python-multipart==0.0.20
     # via -r requirements.in
 pyyaml==6.0.2
-    # via uvicorn
+    # via
+    #   langchain-core
+    #   uvicorn
 qdrant-client==1.14.2
     # via -r requirements.in
 regex==2024.11.6
@@ -161,6 +175,8 @@ sniffio==1.3.1
     #   openai
 starlette==0.46.2
     # via fastapi
+tenacity==9.1.2
+    # via langchain-core
 tiktoken==0.9.0
     # via -r requirements.in
 tqdm==4.67.1
@@ -172,6 +188,7 @@ typing-extensions==4.14.0
     #   aiosqlite
     #   anyio
     #   fastapi
+    #   langchain-core
     #   mypy
     #   openai
     #   pydantic
